
[TestConsistentReturnRule/invalid-0 - 1]
Diagnostic 1: missingReturnValue (4:16 - 4:22)
Message: Function 'foo' expected a return value.
   3 |           if (flag) return true;
   4 |           else return;
     |                ~~~~~~~
   5 |         }
---

[TestConsistentReturnRule/invalid-1 - 1]
Diagnostic 1: missingReturnValue (5:11 - 5:17)
Message: Function 'foo' expected a return value.
   4 |           if (flag) return bar();
   5 |           return;
     |           ~~~~~~~
   6 |         }
---

[TestConsistentReturnRule/invalid-2 - 1]
Diagnostic 1: missingReturnValue (2:9 - 6:9)
Message: Function 'foo' expected a return value.
   1 | 
   2 |         function foo(flag: boolean) {
     |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |           if (flag) {
     | ~~~~~~~~~~~~~~~~~~~~~
   4 |             return 1;
     | ~~~~~~~~~~~~~~~~~~~~~
   5 |           }
     | ~~~~~~~~~~~
   6 |         }
     | ~~~~~~~~~
   7 |       
---

[TestConsistentReturnRule/invalid-3 - 1]
Diagnostic 1: unexpectedReturnValue (6:13 - 6:29)
Message: Function 'baz' expected no return value.
   5 |             if (flag) return;
   6 |             return undefined;
     |             ~~~~~~~~~~~~~~~~~
   7 |           }

Diagnostic 2: missingReturnValue (9:11 - 9:17)
Message: Function 'bar' expected a return value.
   8 |           if (flag) return baz();
   9 |           return;
     |           ~~~~~~~
  10 |         }
---

[TestConsistentReturnRule/invalid-4 - 1]
Diagnostic 1: missingReturnValue (4:16 - 4:22)
Message: Function 'foo' expected a return value.
   3 |           if (flag) return Promise.resolve(void 0);
   4 |           else return;
     |                ~~~~~~~
   5 |         }
---

[TestConsistentReturnRule/invalid-5 - 1]
Diagnostic 1: unexpectedReturnValue (4:16 - 4:30)
Message: Async function 'foo' expected no return value.
   3 |           if (flag) return;
   4 |           else return 'value';
     |                ~~~~~~~~~~~~~~~
   5 |         }
---

[TestConsistentReturnRule/invalid-6 - 1]
Diagnostic 1: missingReturnValue (4:16 - 4:22)
Message: Async function 'foo' expected a return value.
   3 |           if (flag) return 'value';
   4 |           else return;
     |                ~~~~~~~
   5 |         }
---

[TestConsistentReturnRule/invalid-7 - 1]
Diagnostic 1: unexpectedReturnValue (4:11 - 4:19)
Message: Async function 'foo' expected no return value.
   3 |           if (flag) return;
   4 |           return 1;
     |           ~~~~~~~~~
   5 |         }
---

[TestConsistentReturnRule/invalid-8 - 1]
Diagnostic 1: unexpectedReturnValue (4:16 - 4:30)
Message: Function 'foo' expected no return value.
   3 |           if (flag) return;
   4 |           else return 'value';
     |                ~~~~~~~~~~~~~~~
   5 |         }
---

[TestConsistentReturnRule/invalid-9 - 1]
Diagnostic 1: missingReturnValue (7:11 - 7:17)
Message: Function 'foo' expected a return value.
   6 |           }
   7 |           return;
     |           ~~~~~~~
   8 |         }
---

[TestConsistentReturnRule/invalid-10 - 1]
Diagnostic 1: unexpectedReturnValue (6:11 - 6:22)
Message: Function 'foo' expected no return value.
   5 |           }
   6 |           return true;
     |           ~~~~~~~~~~~~
   7 |         }
---

[TestConsistentReturnRule/invalid-11 - 1]
Diagnostic 1: unexpectedReturnValue (7:11 - 7:28)
Message: Function 'foo' expected no return value.
   6 |           }
   7 |           return undefOrNum;
     |           ~~~~~~~~~~~~~~~~~~
   8 |         }
---
